Fixes paragraph line-heights and image spacing issues.

--- a/css/index.css
+++ b/css/index.css
@@ -702,7 +702,7 @@ img {
 
 p+p img {
   margin: 0;
-  max-width: 100%;
+  width: 40em;
 }
 
 code,
